test/files/neg/t7251.check
B_2.scala:5: error: object Outer$Triple$ is not a member of package s
    println( s.Outer$Triple$ )
               ^
one error found
